# pilot-hdc-download

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  gunicorn_config.py  pyproject.toml  run.py
.github/workflows/: hdc-pipeline.yml
app/: api_registry.py  config.py  logger.py  main.py
app/commons/: dataset.activity.avsc  kafka_producer.py  locks.py
app/commons/download_manager/: dataset_download_manager.py  file_download_manager.py
app/models/: base_models.py  models_data_download.py
app/resources/: download_token_manager.py  error_handler.py  health_check.py  helpers.py
app/routers/: api_root.py
app/routers/v1/: api_data_download.py
app/routers/v2/: api_data_download.py
tests/: conftest.py
tests/commons/: test_dataset_download_manager.py  test_file_download_manager.py
tests/resources/: test_download_token.py
tests/routers/: test_root.py
tests/routers/v1/: test_api_data_download.py
tests/routers/v2/: test_dataset_file_pre_download.py  test_project_file_pre_download.py
